--- a/locales/translations.json
+++ b/locales/translations.json
@@ -2,8 +2,8 @@
     "ko": {
         "hero": {
             "main": "설명하지 않아도<br>이해되는 전자명함",
-            "sub": "QR 하나로 소개·신뢰·연락까지 한 번에 전달하세요.",
-            "point": "국내·해외 고객에게 바로 전달 가능한 다국어 전자명함",
+            "sub": "QR 하나로 소개·신뢰·연락까지<br> 한 번에 전달하세요.",
+            "point": "국내·해외 고객에게 <br>바로 전달 가능한 다국어 전자명함",
             "cta": "명함을 바꾸면, 결과가 달라집니다."
         },
         "qr": {
